--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#4F46E5" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="format-detection" content="telephone=no" />
